color overflow fixed

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -27,3 +27,7 @@ h3 {
 #root>div>div>form>div:nth-child(1)>label {
     color: white;
 }
+
+body > #root > div {
+    height: 100vh;
+  }
